htdocs/css/custom.css
body { 
	font-family: Verdana, Arial, monospace, sans-serif;
	padding-top: 50px;
	overflow-y: scroll;
}

body.widget {
	padding-top: 0px;
}

hr {
	margin: 9px 0;
}

i {
	cursor: pointer;
}

.table {
	margin-bottom: 0;
}

table.summary {
	cursor: pointer;
}

.table#alert-details tbody tr:hover td,
.table#alert-details tbody tr:hover th {
  background-color: transparent;
}

.navbar-fixed-top .brand {
  padding-right: 0;
  padding-left: 0;
  margin-left: 20px;
  float: right;
  font-weight: bold;
  color: #000;
  text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
  -webkit-transition: all .2s linear;
     -moz-transition: all .2s linear;
          transition: all .2s linear;
}
.navbar-fixed-top .brand:hover {
  text-decoration: none;
}

.show-grid {
  margin-top: 10px;
  margin-bottom: 20px;
}
.show-grid [class*="span"] {
  background-color: #eee;
  text-align: center;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
  min-height: 30px;
  line-height: 30px;
}
.show-grid:hover [class*="span"] {
  background: #ddd;
}
.show-grid .show-grid {
  margin-top: 0;
  margin-bottom: 0;
}
.show-grid .show-grid [class*="span"] {
  background-color: #ccc;
}

#status-counts {
  margin-left: 0px;
}

#from-date-select {
  width: 150px;
}

.loader {
	background-image: url(../img/loading.gif);
	background-position: right top;
	background-repeat: no-repeat;
}

.initially-hidden {
	display: none;
}

.table th {
	vertical-align: top;
}

.summary td {
	width: 20%;
}

.ad-more {
	width: 1%;
}

.CRITICAL {
  background-color: red;
}
.table tbody tr:hover td.critical, .critical {
  background-color: red;
}

.MAJOR {
  background-color: orange;
}
.table tbody tr:hover td.major, .major {
  background-color: orange;
}

.MINOR {
	background-color: yellow;
}
.table tbody tr:hover td.minor, .minor {
  background-color: yellow;
}

.label-minor {
  background-color: #ffd700;
}
.label-minor:hover {
  background-color: #CDAD00;
}

.WARNING {
  background-color: #1E90FF; // dodger-blue
}
.table tbody tr:hover td.warning, .warning {
  background-color: #1E90FF;
}

.NORMAL {
  background-color: lime;
}
.table tbody tr:hover td.normal, .normal {
	background-color: lime;
}

.INFORM {
  background-color: lime;
}

.DEBUG {
  background-color: #7554BF;
}

.table tbody tr:hover td.zero, .zero {
	background-color: #ddd;
}

caption {
	font-weight: bold;
}

.acked .ACK {
	display: none;
}

.table#alert-details tbody tr.ACK td {
  background-color: rgba(255, 250, 240, 0.5);
}

.priority .NORMAL {
	display: none;
}

.alert-more {
	background: #fff;
}

